fix mobile overflow on image

--- a/css/resume.css
+++ b/css/resume.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 .interactive {
     margin-top: 16px;
     margin-left:auto;
